Fixing h1 on iphone 5 and smaller

--- a/public/master.css
+++ b/public/master.css
@@ -704,7 +704,7 @@ a.bottomLinks {
   }
   .header h1 {
     font-size: 2rem;
-    margin-left: -40px;
+    margin-left: -50px;
   }
   .subhead {
     font-size: 1.15em;
